fix mobile cutoff

--- a/mobile.css
+++ b/mobile.css
@@ -111,7 +111,7 @@
 
 #main {
 	width: 90vw;
-	margin-top: -60vh;
+	margin-top: -58vh;
 	padding-left: 5vw;
 	padding-right: 5vw;
 	height: 45vh;
@@ -136,7 +136,7 @@
 }
 
 #dev_tag {
-	margin-top: 60vh; 
+	margin-top: 58vh; 
 	margin-left: 10vw; 
 	font-weight: 400; 
 	font-size: 3vh;
